# coddog

./: .dockerignore  .env.dev  .env.example  .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.frontend  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml  docker-compose.dev.yml  docker-compose.yml  reset.sh  sqlx_prepare.sh
.github/workflows/: release.yml  rust.yml  website.yml
.sqlx/: query-014c8dd25f1f2b93033f85c51a1a284c610df76aae9eafa9966d80587341455c.json  query-05f6997c3379222bf3c77d1ac9977782272d627a6883a438093b4b87fbdf5328.json  query-0746db80b86e8b446e7714671115336af34b9d28e74a0648fbe26c6aa1a2aee3.json  query-09708293543c8092e38a9eef5f153950f128381b779ab8346981a4abafa2dcee.json  query-0dbc475913cf68316d2a3ad59f68e3dcbb07437d20e2f83f228056d44e0eb427.json  query-0eb5013304ecc7ed8050f7987be836ee8a7050f78188fbc094f39f2a20da0125.json  query-10153c39739bea3eaba1db421794ee24d3db5f8bad3f1e3ef4434af31a286ffd.json  query-10a4c34694159983be1b89347b70b6f7c052b80e9855517beb6eecea564f38cd.json  query-14c4335092b30db0fbcae3c66ec164b6e3d18e3724fd16e9b39ae9713a3b5a6f.json  query-184a09d8c84061938663c58cba11993f134586635e136a627c2f183fa7212203.json  query-19932de4c7088d57fa5db683080995fb8b99ca653cd30bdafcc5ad7da64b42b7.json  query-1b237e57f83e2b0dfa1c897dc1f4d27e3b04337bb1928a4e2d9f78e4d54acf39.json  query-1d580b3384865ed66805f06d31635dec873fc1c4f35ea159381d58e3d1517896.json  query-1edbdfc3cc61464ac6cbaf4f35a928fb3942093647995ae489fb5aed3102b70d.json  query-20a734b2d04e29188fdf0e5c313c689261e721d4a6b4a9d3d65df4d172922722.json  query-21877891a21822c607f988946c58f8e862c45d3e57b4c36e11cfdd222d4579e1.json  query-2385f740367b0dede7326834b9048a6c715fe86a8882eb8ecde65d8d8dbdb5c8.json  query-28c7a40e59c102d0fd63ed08d013aa72675bd30ece7d96232be1c5f2418c61f2.json  query-28f2a603b4bedb5c32933088db408e7ccc804879d8b403b5ef054ed22ba53c2d.json  query-29041b05686cacdf9b421d13f9a3339c9ba11c98166f912f37cebf9e0323b753.json  query-29356ceade5be500173e8655241a35973a4333a3d19ec0b9e3dfabbd0bc97b8c.json  query-2a56981ba30ff7508903576200148505dd36bc348e0293ea9b5635f9fb48160d.json  query-2b2ac495bc1740c84a99bd262ebf1397cec8fd5033c858a28e3e27abacb60fd6.json  query-2b93c9ad90c732121cb8fa5cf1b52e3a0f8e42d3db141253729e6fa8e9761a3b.json  query-2e53ddbbf1ec9e835263d1ad9e90d673090ae0f8a54c73ac44598d5c43d4068c.json  query-33694d3c4096af849e619bc111ec44abeda2fad1cd7573a238243af964e780a0.json  query-34bdc70ede4d3cc85bd7af13d90dde7ec9b4a32603b890001fbcbe2c563cc755.json  query-35db193b8a7b8b0b5eb3dba323c265331c3ecf06f46bc22fee172b0796fd8af7.json  query-379ef09d75c06d424742928fa84f06885d548f7d5eef1f9b74eee25f6fd0d2d0.json  query-38253c6308a30b70c5646cc82b7ac24d3c6bb8fb79d3efa3b5adeab8abe7fd31.json  query-3cba0c2720454ffa8d6f32440a1eb7fec4d91d26b16a908d0f7a1c19c6867b11.json  query-3cc3c363340d52f3ffbefc2769cb859699f312fa61f4e671ed6313289e622294.json  query-3dd13ff419b1aa5f136392366772262916cd7f657dccba18c36a38c7db431c01.json  query-3eafde183ce4f2f0d08d1308c802a230978ebc4f411c6ad536870aa6e7cee17e.json  query-437d9ccb1bab9f1a7d92cc918e0867b2ad42b126264dc5efd0e58121f992026c.json  query-44c6ee9b8d9329280a66e4a48f3da4f65399dd26b68f84826c4c26ba976544ed.json  query-4525cf076e38880205c7f24b575f43cc30f023cf27a534ec1dd7eac354a3644c.json  query-461aadc1c7c2e47b323beec4bebffd9b9caee9bdb4d2cdca7904de3791d9848b.json  query-4c6f3746874b27c10e879c843e58b655f37f425f58f98594ab2f731648da24d3.json  query-4ce22fc4c7b66f253ce1be370e6e192d206933d2fb0d6717376e3c51b1718ed1.json  (+70 more)
coddog-cli/: Cargo.toml
coddog-cli/src/: db.rs  main.rs
coddog-core/: Cargo.toml
coddog-core/src/: cluster.rs  ingest.rs  lib.rs
crates/api/: Cargo.toml
crates/api/src/: main.rs  projects.rs
crates/cli/: Cargo.toml
crates/cli/src/: cluster.rs  db.rs  main.rs
crates/coddog-cli/: Cargo.toml
crates/coddog-cli/src/: main.rs
crates/coddog-core/: Cargo.toml
crates/coddog-core/src/: cluster.rs  ingest.rs  instructions.rs  lib.rs
crates/coddog-db/: Cargo.toml
crates/coddog-db/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: arch.rs  cluster.rs  ingest.rs  instructions.rs  lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20250508130138_init.sql  20250818143755_decompme.sql  20250818143755_setup.sql
crates/db/src/: decompme.rs  lib.rs  main.rs  objects.rs  projects.rs  sources.rs  symbols.rs
deployment/: .dockerignore  Dockerfile.api  Dockerfile.cli  Dockerfile.db-cli  Dockerfile.frontend  cli.sh  db.sh  deploy.sh  docker-compose.yml
deployment/nginx/: default.conf
migrations/: 20250508130138_init.sql
src/: cluster.rs  core.rs  main.rs
test/: notes.txt  simple.c  simple.lcf  simple.ld  simple_gba.s  simple_mips.map
website/: biome.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rsbuild.config.ts
website/src/: app.tsx  env.d.ts  index.tsx  routeTree.gen.ts  styles.css
website/src/api/: config.ts  projects.tsx  sources.tsx  symbols.tsx
website/src/components/: AssemblyViewer.module.css  AssemblyViewer.tsx  DecompmeLogo.module.css  DecompmeLogo.tsx  DualAssemblyViewer.module.css  DualAssemblyViewer.tsx  Slider.module.css  Slider.tsx  SymbolLabel.module.css  SymbolLabel.tsx  SymbolLabelOther.tsx  SymbolMatches.module.css  SymbolMatches.tsx  SymbolSubmatches.module.css  SymbolSubmatches.tsx
website/src/routes/: __root.tsx  about.tsx  admin.tsx  compare.tsx  index.tsx  projects.tsx  search.tsx
website/src/routes/match/: $symbolId.tsx  index.tsx
website/src/routes/source/$sourceSlug/: index.tsx
website/src/routes/submatch/: $symbolId.tsx  index.tsx
website/src/routes/symbol/: $symbolSlug.tsx  index.tsx
website/src/routes/symbol/$symbolSlug/: index.tsx  submatch.module.css  submatch.tsx
