db_path = "coddog.fb"

[package]
name = "coddog"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
config = { version = "0.14.0", features = ["toml"] }
dashmap = { version = "5.5.3", features = ["serde"] }
editdistancek = "1.0.2"
glob = "0.3.1"
mapfile_parser = "2.4.0"
serde = "1.0.203"
smallvec = { version = "1.13.2", features = ["serde"] }
