[workspace]
members = ["crates/api", "crates/db", "crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.5.0"
authors = ["Ethan Roseman <ethteck@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ethteck/coddog"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
