[package]
name = "coddog-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = """
A library for finding matching sequences of code among binaries
"""

[dependencies]
anyhow = "1.0"
editdistancek = "1.0.2"
object = "0.36.7"
mapfile_parser = "2.7.5"