[package]
name = "coddog-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = """
An api for finding matching sequences of code among binaries
"""

[dependencies]
axum = "0.8.4"
axum-validated-extractors = "0.1.2"
coddog-db = { path = "../db" }
coddog-core = { path = "../core" }
dotenvy = "0.15.7"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["macros", "migrate", "runtime-tokio", "postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
validator = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
