[package]
name = "coddog-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = """
A tool for finding matching sequences of code among binaries
"""

[features]
default = ["db"]
db = ["dep:coddog-db", "dep:sqlx"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
coddog-db = { path = "../db", optional = true }
coddog-core = { path = "../core" }
colored = "3.0.0"
decomp_settings = "0.0.9"
dotenvy = "0.15.7"
glob = "0.3.2"
inquire = "0.7.5"
itertools = "0.14.0"
pbr = "1.1.1"
sqlx = { version = "0.8", features = ["macros", "migrate", "runtime-tokio", "postgres"], optional = true }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
