[package]
name = "coddog-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = """
A tool for finding matching sequences of code among binaries
"""

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
coddog-core = { path = "../core" }
colored = "3.0.0"
decomp_settings = "0.0.9"
glob = "0.3.3"
inquire = "0.7.5"
itertools = "0.14.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
