[package]
name = "coddog-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = """
A tool for finding matching sequences of code among binaries
"""

[[bin]]
name = "coddog"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
coddog-core = { path = "../core" }
colored = "3.1.1"
decomp_settings = "0.0.10"
glob = "0.3.3"
inquire = "0.9.2"
itertools = "0.14.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
