[package]
name = "coddog-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = """
A library for finding matching sequences of code among binaries
"""

[dependencies]
anyhow = "1.0"
editdistancek = "1.0.2"
object = "0.37.2"
objdiff-core = { git = "https://github.com/encounter/objdiff.git", tag = "v3.0.0-beta.12", features = ["all"] }
mapfile_parser = "2.9.4"
powerpc = "0.4"
rabbitizer = { version = "2.0.0-alpha.4", features = ["all_extensions"] }