[package]
name = "coddog-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = """
A library for finding matching sequences of code among binaries
"""

[dependencies]
anyhow = "1.0"
editdistancek = "1.0.2"
object = "0.38.1"
objdiff-core = { git = "https://github.com/encounter/objdiff.git", features = ["all"] }
mapfile_parser = "2.12.1"
powerpc = "0.4"
rabbitizer = { version = "2.0.0-alpha.7", features = ["all_extensions"] }
serde = { version = "1.0", features = ["derive"] }
unarm = { version = "2.1.0" }