[package]
name = "coddog-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = """
A database library for finding matching sequences of code among binaries
"""

[dependencies]
anyhow = "1"
blake3 = "1.0"
coddog-core = { path = "../core" }
sqlx = { version = "0.8", features = ["macros", "migrate", "runtime-tokio", "postgres"] }
