[package]
name = "coddog-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = """
A database library for finding matching sequences of code among binaries
"""
publish = false

[[bin]]
name = "coddog-db"
path = "src/main.rs"

[dependencies]
anyhow = "1"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
coddog-core = { path = "../core" }
colored = "3.1.1"
decomp_settings = "0.0.10"
dotenvy = "0.15.7"
glob = "0.3.3"
inquire = "0.9.2"
itertools = "0.14.0"
pbr = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["macros", "migrate", "runtime-tokio", "postgres"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
